Fix button contrast ratio

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1{
   appearance: none;
     width: 300px;
   background-color: transparent;
-  border: 2px solid #2B2B2B;
+  border: 2px solid #8a8a8a;
   border-radius: 15px;
   box-sizing: border-box;
   color: #70706f;
